# startup-idea-finder

./: .env.example  .gitignore  DESIGN.md  PRODUCT.md  docker-compose.yml
.impeccable/: design.json
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scout/: .dockerignore  .env.example  Dockerfile  pyproject.toml
scout/scout/: agents.py  agents_v2.py  analysis.py  cli.py  config.py  db.py  innovation.py  kg.py  pipeline.py  scoring.py  web.py
scout/scout/scrapers/: __init__.py  base.py  browser_client.py  github.py  hn.py  jobs.py  news.py  reddit.py  reviews.py  twitter.py  worldmonitor.py
scout/scout/templates/: index.html
sources/: a16z-12-things-about-product-market-fit.md  a16z-martin-casado-guideposts-for-pre-chasm-markets.md  a16z-product-market-sales-fit.md  chatgpt-sources-of-customer-problems.md  chris-dixon-the-idea-maze.md  jared-friedman-how-to-get-and-evaluate-startup-ideas.md  jon-xu-how-to-pick-a-startup-idea.md  kevin-hale-how-to-evaluate-startup-ideas.md  marc-andreessen-original-product-market-fit.md  michael-seibel-building-product-customer-discovery.md  michael-seibel-goals-of-pre-launch-startup.md  michael-seibel-how-to-get-and-test-startup-ideas.md  michael-seibel-one-order-of-operations.md  michael-seibel-the-real-product-market-fit.md  michael-seibel-yc-essential-startup-advice.md  paul-graham-before-the-startup.md  paul-graham-do-things-that-dont-scale.md  paul-graham-how-to-get-startup-ideas.md  paul-graham-schlep-blindness.md  paul-graham-startups-in-13-sentences.md  yc-requests-for-startups-overview.md
web/: index.html  (+2 more)
(+22 files in other folders)
