[project]
name = "scout"
version = "0.1.0"
description = "Startup Idea Scout — AI-powered problem discovery & validation system"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.3",
    "openai>=1.30",
    "httpx>=0.27",
    "feedparser>=6.0",
    "sqlite-utils>=3.36",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "websockets>=12.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "readability-lxml>=0.8",
    "beautifulsoup4>=4.12",
    "pydantic-settings>=2.3",
]

[project.scripts]
scout = "scout.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]
